# pyembed

./: CMakeLists.txt  conanfile.txt
pyembed/: CMakeLists.txt
pyembed/source/: main.cpp
pysrc/: startup.py
